# komootgpx

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/komootgpx/: __init__.py  cli.py  errors.py  gpx.py  komoot.py
tests/: test_cli.py  test_gpx.py  test_komoot.py  test_live_komoot.py  test_real_fixture.py
tests/fixtures/: README.md  komoot_public_smarttour_33303609.payload.json
