[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "komootgpx"
version = "0.1.0"
description = "Convert public Komoot tour pages to GPX files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpxpy==1.6.2",
    "requests==2.34.2",
]

[project.scripts]
komootgpx = "komootgpx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
